# app-corra-pra-beber

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: boas-praticas-python.mdc  guia-corra-pra-beber.mdc
app_corra_pra_beber/: main.py  teste_flet.py
app_corra_pra_beber/utils/: auth_google.py  banco.py
app_corra_pra_beber/views/: counter_view.py  home_view.py  login_view.py
storage/data/: .env.example
