[tool.poetry]
name = "app-corra-pra-beber"
version = "0.1.0"
description = ""
authors = ["thiagomaldonadoc@gmail.com <thiagomaldonadoc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flet = "^0.28.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
